<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/wl_space_s">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <ImageView
        android:id="@+id/task_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/task_card_incomplete" />

    <TextView
        android:id="@+id/task_points"
        style="@style/TextAppearance.Wellnest.TaskScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/wl_space_m"
        android:layout_marginTop="5sp"
        android:includeFontPadding="false"
        android:text="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/task_star_icon"
        android:layout_width="@dimen/wl_icon_tiny"
        android:layout_height="@dimen/wl_icon_tiny"
        android:src="@drawable/star_icon"
        android:translationX="10sp"
        android:translationY="-2sp"
        app:layout_constraintEnd_toEndOf="@+id/task_points"
        app:layout_constraintTop_toTopOf="@+id/task_points" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/task_title"
            style="@style/TextAppearance.Wellnest.ScoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="Wash Dishes" />

        <TextView
            android:id="@+id/task_subtitle"
            style="@style/TextAppearance.Wellnest.ScoreSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="Unfinished" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>