...
                android:src="@drawable/snap_task_score_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/snap_task_score_text"
                style="@style/TextAppearance.Wellnest.Scorecard.SnapTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:includeFontPadding="false"
                android:text="6582"
...

    </LinearLayout>
    <!--  /Scorecard  -->

    <!--  Recycler  -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/snap_task_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/wl_space_m"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />
    <!--  /Recycler  -->
...
